--- a/package.json
+++ b/package.json
@@ -17,8 +17,12 @@
     "build:watch": "tsc --watch"
   },
   "dependencies": {
+    "@graphand/client": "../client",
+    "@graphand/core": "../core",
     "commander": "^10.0.0",
-    "conf": "^11.0.1"
+    "conf": "^10.2.0",
+    "cross-fetch": "^3.1.5",
+    "prompt": "^1.3.0"
   },
   "devDependencies": {
     "@types/node": "^18.11.18",
