--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "commander": "^10.0.0",
     "conf": "^10.2.0",
     "cross-fetch": "^3.1.5",
-    "prompt": "^1.3.0"
+    "jsonrepair": "^3.0.2",
+    "prompt": "^1.3.0",
+    "tmp": "^0.2.1"
   },
   "devDependencies": {
     "@types/node": "^18.11.18",
